# minion_ros_rasp

minion_bringup/: package.xml
minion_bringup/launch/: minion_core.launch
minion_bringup/scripts/: create_udev_rules.sh
minion_bringup/src/: minion_diagnostics.cpp
minion_description/: CMakeLists.txt  model.rviz
minion_description/launch/: minion_base_rviz.launch
minion_description/urdf/: minion.urdf
minion_teleop/: package.xml
minion_teleop/nodes/: minion_teleop_key
src/minion_bringup/: CMakeLists.txt
src/minion_bringup/launch/: minion_robot.launch
src/minion_bringup/launch/includes/: description.launch.xml
src/minion_description/: package.xml
src/minion_description/launch/: minion_base_rviz_gazebo.launch
src/minion_description/urdf/: minion.urdf.xacro  minion_gazebo_plugins.gazebo.xacro
src/minion_teleop/: CMakeLists.txt
src/minion_teleop/launch/: minion_teleop_key.launch
